test/positive/b.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| open Ocamlstdlib |}]
open A
type t3 = (t1 * int t2)
[@@@gospel {| function f4 (x: int t2) (y: t1) : t3 = (y,x) |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ open Ocamlstdlib *)

open A

type t3 = (t1 * int t2)
  

(*@ function f4 ... *)
File "b.mli", line 1, characters 0-34:
Error: No module with name `Ocamlstdlib'.
